<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="aag_privacy_lock_auth_button_label">Verify it’s you</string>
    <string name="aag_privacy_lock_logo_description">Google</string>
    <string name="aag_privacy_lock_prompt_title">Verify it’s you</string>
    <string name="aag_privacy_lock_title">Privacy Screen</string>
    <string name="aag_privacy_settings_delay_list_title">Require authentication</string>
    <string name="aag_privacy_settings_disclaimer_detail">Your shared data may still be available through internet browsers or other apps</string>
    <string name="aag_privacy_settings_disclaimer_features">Notifications\nOther system functionality</string>
    <string name="aag_privacy_settings_disclaimer_title">Privacy Screen may not protect:</string>
    <string name="aag_privacy_settings_feature_switch_summary">When Privacy Screen is turned on, you’ll be asked to verify it’s you when opening this app</string>
    <string name="aag_privacy_settings_feature_switch_title">Privacy Screen</string>
    <string name="aag_privacy_settings_title">Privacy Screen</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_name">Code name</string>
    <string name="add_a_code">Add a code</string>
    <string name="add_first_otp_activity_title" />
    <string name="add_first_otp_text">To begin, either scan the QR code or manually enter the setup key.</string>
    <string name="add_first_otp_title">Add an authenticator code</string>
    <string name="add_token_dialog_no">No</string>
    <string name="add_token_dialog_subtitle">Do you want to add the token named %1$s?</string>
    <string name="add_token_dialog_title">Add token</string>
    <string name="add_token_dialog_yes">Yes</string>
    <string name="all_qr_codes_scanned">All QR codes scanned</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Authenticator</string>
    <string name="app_name_long">Google Authenticator</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="associated_accounts_text">Where should this Authenticator code be stored?</string>
    <string name="associated_accounts_title">Associated account</string>
    <string name="avatar_description">Google Avatar</string>
    <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
    <string name="biometric_prompt_message">Use your biometric to continue</string>
    <string name="biometric_prompt_subtitle">To export your codes, first verify it’s you</string>
    <string name="biometric_prompt_title">Export codes</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="cancel_consent">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_otps">To export, we’ll create a QR code that stores the codes you select below.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_label">OTP Code</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">Google Play services must be enabled for %1$s.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">Install Google Play services to continue using %1$s.</string>
    <string name="common_google_play_services_install_title">Install Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_signin_required_text">%1$s couldn\'t connect to Google Play services. Please sign-in to your Google account.</string>
    <string name="common_google_play_services_signin_required_title">Sign-in required</string>
    <string name="common_google_play_services_try_again_text">%1$s couldn\'t connect to Google Play services. Please try again.</string>
    <string name="common_google_play_services_try_again_title">Please try again</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s can\'t run because your device doesn\'t support Google Play services. Please use a supported device.</string>
    <string name="common_google_play_services_unsupported_title">Device not compatible</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">Update Google Play services to use %1$s.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_client_title">Google Play services updating</string>
    <string name="common_google_play_services_updating_text">%1$s will be available once the Google Play services update is complete.</string>
    <string name="common_google_play_services_wear_update_text">Update Google Play services to use %1$s.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="consent_message">This will allow you to save codes to %1$s</string>
    <string name="consent_title">Start saving codes to this account?</string>
    <string name="content_view_more_options_button_clicked">More options button in the content view is clicked.</string>
    <string name="continue_consent">Continue</string>
    <string name="continue_text">Continue</string>
    <string name="copied_to_clipboard_toast">Code copied to clipboard.</string>
    <string name="copy">Copy</string>
    <string name="could_not_create_otp_code">Could not generate code for this account. Try removing it from Authenticator and setting it up again</string>
    <string name="counter_pin">Get code</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="delete_from_passbox_during_migration_error_text">Your code could not be deleted. Sign in to your account and try again.</string>
    <string name="delete_from_passbox_during_migration_error_title">Sign in to delete your codes</string>
    <string name="description0">Get verification codes for all your accounts using 2-Step Verification</string>
    <string name="description1">To setup an account, you’ll scan the QR code in your 2-Step Verification settings for Google or any third-party service</string>
    <string name="description2">When using 2-Step Verification, you’ll enter your password and a code from this app</string>
    <string name="description3">Google Authenticator can save your codes to your Google Account</string>
    <string name="disabled_shortcut">The shortcut is disabled</string>
    <string name="done">Done</string>
    <string name="download_app_and_scan_qr_code">Download the Google Authenticator app on your new device. Within the app, scan this QR code.</string>
    <string name="edit">Edit</string>
    <string name="enter_account_label">Code name</string>
    <string name="enter_key_label">Your key</string>
    <string name="enter_key_page_add_button">Add</string>
    <string name="enter_key_page_add_button_time_based">Time based</string>
    <string name="export_accounts">Export codes</string>
    <string name="get_started">Get started</string>
    <string name="go_to_your_old_device">Go to your old device</string>
    <string name="google_authenticator_is_upgrading_details">You can now sign in to your Google Account and back up your Google Authenticator codes to the cloud</string>
    <string name="google_authenticator_is_upgrading_headline">Google Authenticator is upgrading</string>
    <string name="how_to_transfer">You’ll need to select the codes you want to transfer from the Google Authenticator app on your old device.</string>
    <string name="image_description">How the Authenticator works</string>
    <string name="import_codes">Import codes</string>
    <string name="instructions_step_1">1. Tap the overflow button at the top-right of the app</string>
    <string name="instructions_step_2">2. Find \"Transfer codes\" from the menu, then follow the instructions to continue</string>
    <string name="migration_page_description">You can transfer your codes to a new device that has Google Authenticator.</string>
    <string name="migration_page_introduction_export_description">Create a QR code to export your codes</string>
    <string name="migration_page_introduction_export_heading">Export codes</string>
    <string name="migration_page_introduction_import_description">Scan a QR code to bring new codes in</string>
    <string name="migration_page_introduction_import_heading">Import codes</string>
    <string name="migration_page_title">Transfer codes</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="privacy_screen">Privacy screen</string>
    <string name="privacy_screen_choice_explanation">Require unlock after app is invisible:</string>
    <string name="privacy_screen_default_value">0</string>
    <string name="privacy_screen_summary">When privacy screen is enabled, access to this app will be restricted by your screen lock, PIN or biometric</string>
    <string name="privacy_screen_toggle">PrivacyScreenToggleKey</string>
    <string name="save">Save</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="scan_this_qr_code">Scan this QR code</string>
    <string name="screen_lock_preferences">ScreenLockPreferences</string>
    <string name="select_accounts">Select codes</string>
    <string name="title0">Stronger security with Google Authenticator</string>
    <string name="type_of_key">Type of key</string>
</resources>