<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/privacy_screen">
        <SwitchPreferenceCompat
            android:persistent="false"
            app:key="@string/privacy_screen_toggle"
            app:summary="@string/privacy_screen_summary"
            app:title="@string/privacy_screen"/>
        <ListPreference
            android:persistent="false"
            android:entries="@array/privacy_screen_time_entries"
            android:title="@string/privacy_screen_choice_explanation"
            android:key="@string/screen_lock_preferences"
            android:summary="%s"
            android:defaultValue="@string/privacy_screen_default_value"
            android:entryValues="@array/privacy_screen_time_values"
            app:isPreferenceVisible="false"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
