<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scan_qr_code_button">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/import_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/import_codes"
                android:layout_marginStart="@dimen/text_views_start_end_margin"
                android:layout_marginEnd="@dimen/text_views_start_end_margin"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/icon_import"/>
            <TextView
                android:id="@+id/title"
                android:text="@string/go_to_your_old_device"
                android:layout_below="@+id/import_icon"
                style="@style/ImportTitleStyle"/>
            <TextView
                android:id="@+id/subtitle"
                android:text="@string/how_to_transfer"
                android:layout_below="@+id/title"
                style="@style/ImportSubtitleStyle"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle"
                android:layout_marginStart="@dimen/text_views_start_end_margin"
                android:layout_marginEnd="@dimen/text_views_start_end_margin">
                <TextView
                    android:id="@+id/instructions1"
                    android:text="@string/instructions_step_1"
                    style="@style/InstructionsStyle"/>
                <TextView
                    android:id="@+id/instructions2"
                    android:text="@string/instructions_step_2"
                    style="@style/InstructionsStyle"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/scan_qr_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:text="@string/scan_qr_code"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/text_views_start_end_margin"
        android:layout_marginEnd="@dimen/text_views_start_end_margin"/>
</RelativeLayout>
