<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="@dimen/image_margin_top"
            android:layout_marginBottom="@dimen/image_margin_bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/warm_welcome0"/>
        <TextView
            android:id="@+id/title"
            android:text="@string/title0"
            style="@style/title"/>
        <TextView
            android:id="@+id/description"
            android:text="@string/description0"
            style="@style/description"/>
    </LinearLayout>
</ScrollView>
