<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/export_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/export_accounts"
            android:layout_marginStart="@dimen/text_views_start_end_margin"
            android:layout_marginEnd="@dimen/text_views_start_end_margin"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/icon_export"/>
        <TextView
            android:id="@+id/title"
            android:text="@string/scan_this_qr_code"
            android:layout_below="@+id/export_icon"
            style="@style/ExportTitleStyle"/>
        <TextView
            android:id="@+id/subtitle"
            android:text="@string/download_app_and_scan_qr_code"
            android:layout_below="@+id/title"
            style="@style/ExportSubtitleStyle"/>
        <ImageView
            android:id="@+id/export_qr_code_image"
            android:layout_width="@dimen/export_qr_code_size"
            android:layout_height="@dimen/export_qr_code_size"
            android:layout_above="@+id/next_button"
            android:layout_below="@+id/subtitle"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/download_app_and_scan_qr_code"/>
        <Button
            android:id="@+id/prev_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:text="@string/prev"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/qr_code_buttons_horizontal_margin"
            android:layout_marginEnd="@dimen/qr_code_buttons_horizontal_margin"
            android:layout_alignParentStart="true"/>
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:text="@string/next"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/qr_code_buttons_horizontal_margin"
            android:layout_marginEnd="@dimen/qr_code_buttons_horizontal_margin"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</ScrollView>
