<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/edit_account_root"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rename_edittext_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:hint="@string/account_name"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rename_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/multiple_accounts_choice_header"
        android:text="@string/associated_accounts_title"
        android:layout_below="@+id/rename_edittext_input_layout"
        style="@style/MultipleAccountsTitle"/>
    <TextView
        android:id="@+id/multiple_accounts_choice_text"
        android:text="@string/associated_accounts_text"
        android:layout_below="@+id/multiple_accounts_choice_header"
        style="@style/MultipleAccountsText"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/accounts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_above="@+id/edit_account_save"
        android:layout_below="@+id/multiple_accounts_choice_text"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"/>
    <Button
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/edit_account_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
