<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/icon"
        android:contentDescription="@string/migration_page_title"
        app:srcCompat="@drawable/icon_transfer"
        style="@style/MigrationPageIconsStyle"/>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/migration_bottom_margin"
        android:fillViewport="true"
        android:layout_below="@+id/icon">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_marginBottom="20dp"
                android:text="@string/migration_page_title"
                style="@style/MigrationTitleStyle"/>
            <TextView
                android:id="@+id/text"
                android:layout_marginBottom="20dp"
                android:text="@string/migration_page_description"
                style="@style/MigrationSubtitleStyle"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/clickable_areas"
        android:layout_below="@+id/scroll_view"
        android:layout_marginStart="@dimen/migration_horizontal_margin"
        style="@style/MigrationButtonsStyle">
        <RelativeLayout
            android:id="@+id/export_button"
            android:background="@drawable/top_button_shape"
            android:paddingTop="@dimen/migration_buttons_verticalPadding"
            android:paddingBottom="@dimen/migration_buttons_verticalPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/migration_buttons_margin">
            <ImageView
                android:id="@+id/export_icon"
                android:contentDescription="@string/migration_page_introduction_export_heading"
                app:srcCompat="@drawable/icon_export"
                style="@style/MigrationIconsStyle"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/export_icon">
                <TextView
                    android:text="@string/migration_page_introduction_export_heading"
                    style="@style/MigrationButtonTitleStyle"/>
                <TextView
                    android:text="@string/migration_page_introduction_export_description"
                    style="@style/MigrationButtonSubtitleStyle"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/import_button"
            android:background="@drawable/bottom_button_shape"
            android:paddingTop="@dimen/migration_buttons_verticalPadding"
            android:paddingBottom="@dimen/migration_buttons_verticalPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/import_icon"
                android:contentDescription="@string/migration_page_introduction_import_heading"
                app:srcCompat="@drawable/icon_import"
                style="@style/MigrationIconsStyle"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/import_icon">
                <TextView
                    android:text="@string/migration_page_introduction_import_heading"
                    style="@style/MigrationButtonTitleStyle"/>
                <TextView
                    android:text="@string/migration_page_introduction_import_description"
                    style="@style/MigrationButtonSubtitleStyle"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
