<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/enter_key_text_fields_margins"
            android:hint="@string/enter_account_label"
            android:layout_marginStart="@dimen/enter_key_text_fields_margins"
            android:layout_marginEnd="@dimen/enter_key_text_fields_margins"
            android:labelFor="@+id/otp_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp_secret_key_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/enter_key_text_fields_margins"
            android:hint="@string/enter_key_label"
            android:layout_marginStart="@dimen/enter_key_text_fields_margins"
            android:layout_marginEnd="@dimen/enter_key_text_fields_margins"
            android:labelFor="@+id/otp_secret_key">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_secret_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/enter_key_text_fields_margins"
            android:hint="@string/type_of_key"
            android:layout_marginStart="@dimen/enter_key_text_fields_margins"
            android:layout_marginEnd="@dimen/enter_key_text_fields_margins"
            android:labelFor="@+id/dropdown_menu_text_view"
            style="@style/Widget.GoogleMaterial3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/dropdown_menu_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_key_page_add_button_time_based"
                android:inputType="none"
                android:labelFor="@+id/dropdown_menu"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:layout_gravity="bottom"
        android:id="@+id/enter_key_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/enter_key_text_fields_margins"
        android:text="@string/enter_key_page_add_button"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/enter_key_text_fields_margins"
        android:layout_marginEnd="@dimen/enter_key_text_fields_margins"/>
</RelativeLayout>
